Model with LSTM and implemented ResNet

--- a/Model/Channel_prediction_model.ipynb
+++ b/Model/Channel_prediction_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "adea31ed",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "0f73f1e9",
    "metadata": {},
    "outputs": [],
@@ -67,21 +67,57 @@
     "def create_model(e2_input_shape=(5, 4, 19), srs_input_shape=(20, 20, 1536), lstm_units=128, dropout_rate=0.3):\n",
     "    # Radio Branch\n",
     "    radio_input = layers.Input(shape=e2_input_shape, name='radio_input')\n",
-    "    r1 = layers.Conv2D(32, (3, 3), activation='relu', padding='same')(radio_input)\n",
+    "    r1 = layers.Conv2D(32, (3, 3), padding='same')(radio_input)\n",
     "    r1 = layers.BatchNormalization()(r1)\n",
+    "    r1 = layers.Activation('relu')(r1)\n",
     "    r1 = layers.ZeroPadding2D(padding=((0,0),(0,1)))(r1) # Result: (5, 5, 32)\n",
+    "    r1 = layers.Conv2D(64, (3, 3), padding='same')(r1)\n",
+    "    r1 = layers.BatchNormalization()(r1) # (5, 5, 64)\n",
+    "    r1 = layers.Activation('relu')(r1)\n",
     "\n",
     "    # SRS Branch\n",
     "    srs_input = layers.Input(shape=srs_input_shape, name='srs_input')\n",
-    "    s1 = layers.Conv2D(128, (3, 3), activation='relu', padding='same')(srs_input) # Reduced filters for speed\n",
-    "    s1 = layers.MaxPooling2D((2, 2))(s1) # 10x10\n",
-    "    s1 = layers.Conv2D(64, (3, 3), activation='relu', padding='same')(s1)\n",
-    "    s1 = layers.MaxPooling2D((2, 2))(s1) # 5x5\n",
+    "    s1 = layers.Conv2D(512, (3, 3), activation='relu', padding='same')(srs_input) # Reduced filters for speed\n",
+    "    s1_shortcut = s1 # (20, 20, 512)\n",
+    "\n",
+    "    s1 = layers.Conv2D(128, (1, 1), padding='valid')(s1)\n",
+    "    s1 = layers.BatchNormalization()(s1) # (20, 20, 128)\n",
+    "    s1 = layers.Activation('relu')(s1)\n",
+    "    s1 = layers.Conv2D(128, (3, 3), padding='same')(s1)\n",
+    "    s1 = layers.BatchNormalization()(s1) # (20, 20, 128)\n",
+    "    s1 = layers.Activation('relu')(s1)\n",
+    "    s1 = layers.Conv2D(256, (1, 1), padding='valid')(s1)\n",
+    "    s1 = layers.BatchNormalization()(s1) # (20, 20, 256)\n",
+    "\n",
+    "    s1_shortcut = layers.Conv2D(256, (1, 1), activation='relu', padding='valid')(s1_shortcut)\n",
+    "    s1_shortcut = layers.BatchNormalization()(s1_shortcut) # (20, 20, 256)\n",
+    "\n",
+    "    s1 = layers.Add()([s1, s1_shortcut]) # (20, 20, 256)\n",
+    "    s1 = layers.Activation('relu')(s1)\n",
+    "\n",
+    "    s1_shortcut = s1 # (20, 20, 256)\n",
+    "    s1 = layers.Conv2D(256, (1, 1), padding='valid')(s1) \n",
+    "    s1 = layers.BatchNormalization()(s1) # (20, 20, 256)\n",
+    "    s1 = layers.Activation('relu')(s1)\n",
+    "    s1 = layers.Conv2D(256, (3, 3), padding='same')(s1)\n",
+    "    s1 = layers.BatchNormalization()(s1) # (20, 20, 256)\n",
+    "    s1 = layers.Activation('relu')(s1)\n",
+    "    s1 = layers.Conv2D(512, (1, 1), padding='valid')(s1)\n",
+    "    s1 = layers.BatchNormalization()(s1) # (20, 20, 512)\n",
+    "\n",
+    "    s1_shortcut = layers.Conv2D(512, (1, 1), activation='relu', padding='valid')(s1_shortcut)\n",
+    "    s1_shortcut = layers.BatchNormalization()(s1_shortcut) # (20, 20, 512)\n",
+    "\n",
+    "    s1 = layers.Add()([s1, s1_shortcut])\n",
+    "    s1 = layers.Activation('relu')(s1)\n",
+    "\n",
+    "    s1 = layers.AveragePooling2D((2, 2))(s1) # (10, 10, 512)\n",
+    "    s1 = layers.AveragePooling2D((2, 2))(s1) # (5, 5, 512)\n",
     "    s1 = layers.BatchNormalization()(s1)\n",
     "\n",
     "    # Concatenate\n",
-    "    x = layers.Concatenate(axis=-1)([r1, s1]) # (5, 5, 32 + 64)\n",
-    "    x = layers.Reshape((25, 96))(x)\n",
+    "    x = layers.Concatenate(axis=-1)([r1, s1]) #   (5, 5, 576)\n",
+    "    x = layers.Reshape((25, 576))(x)\n",
     "    x = layers.LSTM(lstm_units, return_sequences=True)(x)\n",
     "    x = layers.Flatten()(x) \n",
     "    x = layers.Dense(1024, activation='relu')(x)\n",
@@ -95,64 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "96b4623f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_15\"\n",
-      "__________________________________________________________________________________________________\n",
-      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      " srs_input (InputLayer)         [(None, 20, 20, 153  0           []                               \n",
-      "                                6)]                                                               \n",
-      "                                                                                                  \n",
-      " conv2d_67 (Conv2D)             (None, 20, 20, 128)  1769600     ['srs_input[0][0]']              \n",
-      "                                                                                                  \n",
-      " radio_input (InputLayer)       [(None, 5, 4, 19)]   0           []                               \n",
-      "                                                                                                  \n",
-      " max_pooling2d_40 (MaxPooling2D  (None, 10, 10, 128)  0          ['conv2d_67[0][0]']              \n",
-      " )                                                                                                \n",
-      "                                                                                                  \n",
-      " conv2d_66 (Conv2D)             (None, 5, 4, 32)     5504        ['radio_input[0][0]']            \n",
-      "                                                                                                  \n",
-      " conv2d_68 (Conv2D)             (None, 10, 10, 64)   73792       ['max_pooling2d_40[0][0]']       \n",
-      "                                                                                                  \n",
-      " batch_normalization_40 (BatchN  (None, 5, 4, 32)    128         ['conv2d_66[0][0]']              \n",
-      " ormalization)                                                                                    \n",
-      "                                                                                                  \n",
-      " max_pooling2d_41 (MaxPooling2D  (None, 5, 5, 64)    0           ['conv2d_68[0][0]']              \n",
-      " )                                                                                                \n",
-      "                                                                                                  \n",
-      " zero_padding2d_20 (ZeroPadding  (None, 5, 5, 32)    0           ['batch_normalization_40[0][0]'] \n",
-      " 2D)                                                                                              \n",
-      "                                                                                                  \n",
-      " batch_normalization_41 (BatchN  (None, 5, 5, 64)    256         ['max_pooling2d_41[0][0]']       \n",
-      " ormalization)                                                                                    \n",
-      "                                                                                                  \n",
-      " concatenate_20 (Concatenate)   (None, 5, 5, 96)     0           ['zero_padding2d_20[0][0]',      \n",
-      "                                                                  'batch_normalization_41[0][0]'] \n",
-      "                                                                                                  \n",
-      " reshape_34 (Reshape)           (None, 25, 96)       0           ['concatenate_20[0][0]']         \n",
-      "                                                                                                  \n",
-      " lstm_19 (LSTM)                 (None, 25, 128)      115200      ['reshape_34[0][0]']             \n",
-      "                                                                                                  \n",
-      " flatten_17 (Flatten)           (None, 3200)         0           ['lstm_19[0][0]']                \n",
-      "                                                                                                  \n",
-      " dense_27 (Dense)               (None, 1024)         3277824     ['flatten_17[0][0]']             \n",
-      "                                                                                                  \n",
-      " dense_28 (Dense)               (None, 6144)         6297600     ['dense_27[0][0]']               \n",
-      "                                                                                                  \n",
-      " reshape_35 (Reshape)           (None, 4, 1536)      0           ['dense_28[0][0]']               \n",
-      "                                                                                                  \n",
-      "==================================================================================================\n",
-      "Total params: 11,539,904\n",
-      "Trainable params: 11,539,712\n",
-      "Non-trainable params: 192\n",
-      "__________________________________________________________________________________________________\n"
+     "ename": "ValueError",
+     "evalue": "Exception encountered when calling layer \"reshape\" (type Reshape).\n\ntotal size of new array must be unchanged, input_shape = [5, 5, 576], output_shape = [25, 544]\n\nCall arguments received by layer \"reshape\" (type Reshape):\n  • inputs=tf.Tensor(shape=(None, 5, 5, 576), dtype=float32)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mcreate_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39msummary()\n",
+      "Cell \u001b[1;32mIn[6], line 54\u001b[0m, in \u001b[0;36mcreate_model\u001b[1;34m(e2_input_shape, srs_input_shape, lstm_units, dropout_rate)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;66;03m# Concatenate\u001b[39;00m\n\u001b[0;32m     53\u001b[0m x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mConcatenate(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)([r1, s1]) \u001b[38;5;66;03m#   (5, 5, 544)\u001b[39;00m\n\u001b[1;32m---> 54\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mlayers\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mReshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m25\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m544\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     55\u001b[0m x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mLSTM(lstm_units, return_sequences\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)(x)\n\u001b[0;32m     56\u001b[0m x \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mFlatten()(x) \n",
+      "File \u001b[1;32mc:\\Users\\mdraf\\anaconda3\\envs\\py310\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32mc:\\Users\\mdraf\\anaconda3\\envs\\py310\\lib\\site-packages\\keras\\layers\\reshaping\\reshape.py:118\u001b[0m, in \u001b[0;36mReshape._fix_unknown_dimension\u001b[1;34m(self, input_shape, output_shape)\u001b[0m\n\u001b[0;32m    116\u001b[0m     output_shape[unknown] \u001b[38;5;241m=\u001b[39m original \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m known\n\u001b[0;32m    117\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m original \u001b[38;5;241m!=\u001b[39m known:\n\u001b[1;32m--> 118\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[0;32m    119\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output_shape\n",
+      "\u001b[1;31mValueError\u001b[0m: Exception encountered when calling layer \"reshape\" (type Reshape).\n\ntotal size of new array must be unchanged, input_shape = [5, 5, 576], output_shape = [25, 544]\n\nCall arguments received by layer \"reshape\" (type Reshape):\n  • inputs=tf.Tensor(shape=(None, 5, 5, 576), dtype=float32)"
      ]
     }
    ],
@@ -163,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "2e4af64b",
    "metadata": {},
    "outputs": [
