--- a/Model/Channel_prediction_model.ipynb
+++ b/Model/Channel_prediction_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cf42986c",
    "metadata": {},
    "outputs": [
@@ -24,16 +24,7 @@
     "from datetime import datetime\n",
     "from io import StringIO\n",
     "\n",
-    "# ==========================================\n",
-    "# 1. DATA LOADING & NORMALIZATION (PER-SUBCARRIER)\n",
-    "# ==========================================\n",
-    "\n",
     "def load_and_normalize_data(e2_path, srs_path, stats=None):\n",
-    "    \"\"\"\n",
-    "    Loads E2 and SRS data.\n",
-    "    SRS is normalized per-subcarrier using Min-Max scaling.\n",
-    "    Training stats are reused for test data.\n",
-    "    \"\"\"\n",
     "    e2_data = np.load(e2_path)\n",
     "    srs_data = np.load(srs_path).astype(np.float32)\n",
     "\n",
@@ -49,15 +40,9 @@
     "    srs_norm = (srs_data - srs_min) / (srs_max - srs_min + 1e-7)\n",
     "    return e2_data, srs_norm, stats\n",
     "\n",
-    "\n",
     "def denormalize_srs(srs_norm, stats):\n",
-    "    \"\"\"Convert normalized SRS back to real values\"\"\"\n",
     "    srs_min, srs_max = stats\n",
     "    return srs_norm * (srs_max - srs_min) + srs_min\n",
-    "\n",
-    "# ==========================================\n",
-    "# 2. FAST TF.DATA PIPELINE\n",
-    "# ==========================================\n",
     "\n",
     "def get_fast_dataset(e2_data, srs_data, batch_size=4, e2_len=20,\n",
     "                     srs_input_rows=100, pred_offset=5):\n",
@@ -99,20 +84,10 @@
     "        .prefetch(tf.data.AUTOTUNE)\n",
     "    )\n",
     "\n",
-    "\n",
-    "\n",
-    "import os\n",
-    "from datetime import datetime\n",
-    "\n",
     "def save_model_log(model_summary_str, test_results, log_file=\"logs/performance_log.txt\"):\n",
-    "    \"\"\"\n",
-    "    Append model summary and test results to a single log file.\n",
-    "    \"\"\"\n",
-    "    # Ensure the directory exists\n",
     "    os.makedirs(os.path.dirname(log_file), exist_ok=True)\n",
     "\n",
-    "    # Append to file\n",
-    "    with open(log_file, \"a\") as f:  # <-- use 'a' for append\n",
+    "    with open(log_file, \"a\") as f:\n",
     "        f.write(\"\\n\" + \"=\"*50 + \"\\n\")\n",
     "        f.write(f\"LOG TIME: {datetime.now()}\\n\")\n",
     "        f.write(\"=\"*50 + \"\\n\\n\")\n",
@@ -126,7 +101,6 @@
     "\n",
     "    print(f\"Appended log to {log_file}\")\n",
     "    return log_file\n",
-    "\n",
     "\n",
     "e2_train, srs_train, train_stats = load_and_normalize_data(\"E2_train.npy\", \"SRS_train.npy\")\n",
     "train_ds = get_fast_dataset(e2_train, srs_train, batch_size=8) \n",
@@ -142,7 +116,7 @@
     "    test_e2,\n",
     "    test_srs,\n",
     "    batch_size=4\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -514,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ad90e312",
    "metadata": {},
    "outputs": [
@@ -540,7 +514,12 @@
     "stream = StringIO()\n",
     "model.summary(print_fn=lambda x: stream.write(x + \"\\n\"))\n",
     "model_summary_str = stream.getvalue()\n",
-    "save_model_log(model_summary_str, results)"
+    "\n",
+    "# Add model name to the log\n",
+    "model_name = \"Current Model\"\n",
+    "log_file = save_model_log(f\"Model Name: {model_name}\\n\" + model_summary_str, results)\n",
+    "\n",
+    "print(f\"Model name '{model_name}' and summary saved to log: {log_file}\")"
    ]
   }
  ],
